src/components/calendar/themes/calendar.base.scss
@use 'styles/common/component';
@use 'styles/utilities' as *;

:host(igc-calendar) {
    display: flex;
    flex-direction: column;
    font-family: var(--ig-font-family);
    min-width: max-content;
    overflow: hidden;
    font-size: sizable(var(--ig-body-2-font-size), var(--ig-body-2-font-size), var(--ig-body-1-font-size));
    font-weight: sizable(var(--ig-body-2-font-weight), var(--ig-body-2-font-weight), var(--ig-body-1-font-weight));
    font-style: sizable(var(--ig-body-2-font-style), var(--ig-body-2-font-style), var(--ig-body-1-font-style));
    line-height: sizable(var(--ig-body-2-line-height), var(--ig-body-2-line-height), var(--ig-body-1-line-height));
    letter-spacing: sizable(var(--ig-body-2-letter-spacing), var(--ig-body-2-letter-spacing), var(--ig-body-1-letter-spacing));
    text-transform: sizable(var(--ig-body-2-text-transform), var(--ig-body-2-text-transform), var(--ig-body-1-text-transform));

    [part='days-view-container'] {
        [part='navigation'],
        igc-days-view {
            min-width: sizable(rem(290px), rem(314px), rem(360px));
        }
    }

    igc-days-view::part(date),
    igc-days-view::part(week-number),
    igc-days-view::part(label),
    igc-days-view::part(days-row) {
        box-sizing: border-box;
    }

    igc-days-view::part(week-number-inner),
    igc-days-view::part(date-inner) {
        box-sizing: border-box;
    }

    igc-years-view,
    igc-months-view {
        display: grid;
        row-gap: rem(4px);
        width: 100%;
        min-width: sizable(rem(290px), rem(314px), rem(360px));
        grid-template-rows: repeat(3, minmax(max-content, 1fr));
    }

    igc-days-view,
    igc-months-view,
    igc-years-view {
        font-family: var(--ig-font-family);
        overflow: visible;
    }
}

[part='navigation'] {
    position: relative;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0rem(16px);
    user-select: none;
}

[part='months-navigation'],
[part='years-navigation'],
[part~='navigation-button'] {
    background: transparent;
    display: inline-flex;
    user-select: none;
    border: none;
    padding: 0;
    transition: color 150ms ease-in-out;

    &:hover,
    &:focus {
        cursor: pointer;
    }

    &:focus {
        outline: none;
    }
}

[part~='navigation-button'] {
    &[part~='vertical'] {
        transform: rotate(90deg);
    }
}

[part='navigation-buttons'] {
    display: flex;
    align-items: center;

}

:host-context([dir='rtl']),
:host([dir='rtl']) {
    [part~="navigation-button"] {
        transform: rotate(180deg);

        &[part~='vertical'] {
            transform: rotate(90deg);
        }
    }
}

:host(igc-calendar[header-orientation='vertical']) {
    flex-direction: row;

    [part='header'] {
        justify-content: flex-start;
        border-radius: inherit;
        border-start-end-radius: 0;
        border-end-end-radius: 0;
    }

    [part='header-date'] {
        flex-direction: column;
    }
}

[part='days-view-container'] {
    flex-grow: 1;
}

[part='header'] {
    border-radius: inherit;
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: rem(16px);
}

[part='content'] {
    border-radius: inherit;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
}

[part='header-date'],
[part='header-title'] {
    margin: 0;
}

[part='header-date'] {
    display: flex;
    white-space: pre-wrap;
}

.aria-off-screen {
    @include hide-default();
}

